// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decodes ordinary string values 1`] = `
Array [
  <span>
    <FormattedMessage
      id="operation.manage.data.set"
      values={
        Object {
          "name": "lang",
        }
      }
    />
    <FormattedMessage
      id="operation.manage.data.set.to"
      values={
        Object {
          "value": "indonesian",
        }
      }
    />
  </span>,
]
`;

exports[`decodes utf8 string values 1`] = `
Array [
  <span>
    <FormattedMessage
      id="operation.manage.data.set"
      values={
        Object {
          "name": "utf8value",
        }
      }
    />
    <FormattedMessage
      id="operation.manage.data.set.to"
      values={
        Object {
          "value": "马马虎虎",
        }
      }
    />
  </span>,
]
`;

exports[`truncates a long key and long value 1`] = `
Array [
  <span>
    <FormattedMessage
      id="operation.manage.data.set"
      values={
        Object {
          "name": "name_some_really_long_12345...",
        }
      }
    />
    <FormattedMessage
      id="operation.manage.data.set.to"
      values={
        Object {
          "value": "value_some_really_long_1234...",
        }
      }
    />
  </span>,
]
`;
